--- a/config/locales/jpn/nomenclatures.yml
+++ b/config/locales/jpn/nomenclatures.yml
@@ -2502,7 +2502,6 @@ jpn:
         # acetal: "Acetal"
         # actilact: "Actilact"
         # additive: "Additif"
-        # alexis: "Alexis"
         # allium: "Ail"
         # amaranthaceae: "Amaranthaceae"
         # amaryllidaceae: "Amaryllidaceae"
@@ -2511,23 +2510,17 @@ jpn:
         # animal_group: "Troupeau"
         # animal_medicine: "Médicament vétérinaire"
         # antiseptic: "Antiseptique"
-        # apache: "Blé Apache"
         # apiaceae: "Apiaceae"
         # apis: "Apidés"
-        # ascott: "Ascott"
         # asparagus: "Asperge"
         # asteraceae: "Astéracée"
-        # autan: "Autan"
         # avena: "Avena"
-        # aventur: "Aventur"
         # aves: "Oiseau"
-        # aztec: "Aztec"
         # baler: "Botteleuse"
         # bambusa: "Bambou"
         # bergxxon: "Bergxxon"
         # beta: "Betterave"
         # betulaceae: "Betulaceae"
-        # biensur: "Biensur"
         # bioproduct: "Produit vivant"
         # bos: "Bovin"
         # brassica: "Colza"
@@ -2537,8 +2530,6 @@ jpn:
         # brassicaceae: "Crucifères"
         # building: "Bâtiment"
         # building_division: "Pièce de bâtiment"
-        # bussard: "Bussard"
-        # caphorn: "Blé Caphorn"
         # capra: "Caprin"
         # chemical_fertilizer: "Engrais minéral"
         # cichorium: "Chicoré"
@@ -2547,13 +2538,11 @@ jpn:
         # corabel: "Corabel"
         # corylus: "Corylus"
         # corylus_avellana: "Corylus avellana"
-        # courtot: "Courtot"
         # crocus: "Crocus"
         # crocus_sativus: "Crocus sativus"
         # cucumis: "Melon"
         # cucurbitaceae: "Cucurbitaceae"
         # cultivable_zone: "Zone cultivable"
-        # cultur: "Cultur"
         # daucus: "Carotte"
         # disinfectant: "Désinfectant"
         # easement: "Aménagement foncier"
@@ -2562,12 +2551,9 @@ jpn:
         # ennis: "Ennis"
         # equipment: "Équipement"
         # equus: "Equin"
-        # esperia: "Esperia"
         # etincel: "Etincel"
-        # euclide: "Euclide"
         # excrement: "Engrais organiques"
         # fabaceae: "Fabaceae"
-        # fabulis: "Fabulis"
         # fercoril_corabel: "Fercoril corabel"
         # feriale: "Feriale"
         # fertile_coutard: "Fertile coutard"
@@ -2584,7 +2570,6 @@ jpn:
         # fuel: "Gasoil"
         # fungicide: "Produit fongicide"
         # fungus: "Champignon"
-        # galibier: "Galibier"
         # gallus: "Galinacée"
         # gas: "Essence"
         # glycine: "Glycine"
@@ -2608,11 +2593,9 @@ jpn:
         # insecta: "Insecte"
         # insecticide: "Produit insecticide"
         # iridaceae: "Iridaceae"
-        # isengrain: "Isengrain"
         # item: "Pièce"
         # juglandaceae: "Juglandaceae"
         # juglans: "Juglans"
-        # karur: "Karur"
         # lamiaceae: "Lamiaceae"
         # land_parcel: "Parcelle physique"
         # land_parcel_cluster: "Îlot"
@@ -2620,17 +2603,14 @@ jpn:
         # lavandula: "Lavande"
         # lens: "Lentille"
         # lepus: "Lagomorphe"
-        # levis: "Levis"
         # lewis: "Lewis"
         # lg3490: "Lg3490"
         # liliaceae: "Liliaceae"
         # linaceae: "Linaceae"
         # linum: "Lin"
         # liquid_slurry: "Purin"
-        # lona: "Lona"
         # malus: "Pommier"
         # mammalia: "Mammifère"
-        # manital: "Manital"
         # manure: "Fumier"
         # matter: "Matérialisable"
         # meat: "Viande"
@@ -2639,7 +2619,6 @@ jpn:
         # merveille: "Merveille"
         # milk: "Lait"
         # mineral_matter: "Matière minérale"
-        # miradoux: "Miradoux"
         # mix: "Mélange"
         # mollusca: "Mollusque"
         # molluscicide: "Produit molluscicide"
@@ -2648,14 +2627,12 @@ jpn:
         # nicotiana: "Tabac"
         # numida: "Numididae"
         # oil: "Huile"
-        # oratorio: "Oratorio"
         # organic_matter: "Matière organique"
         # oryza: "Riz"
         # osteichthyes: "Poissons osseux"
         # ostreidae: "Ostreidae"
         # ovis: "Ovin"
         # pauetet: "Pauetet"
-        # pescadou: "Pescadou"
         # phaseolus: "Haricot"
         # pisum: "Pisum"
         # plant: "Végétal"
@@ -2688,12 +2665,7 @@ jpn:
         # pyrus_communis_beurre_hardy: "Pyrus communis - Beurre hardy"
         # pyrus_communis_william: "Pyrus communis - William"
         # pyrus_communis_william_bon_chretien: "Pyrus communis - William bon chretien"
-        # qualital: "Qualital"
-        # quality: "Quality"
-        # quebon: "Quebon"
         # reaper: "Moissonneuse-batteuse"
-        # recital: "Recital"
-        # renan: "Renan"
         # ribes: "Ribes"
         # ribes_nigrum: "Ribes nigrum"
         # ribes_nigrum_andega: "Ribes nigrum - Andega"
@@ -2705,7 +2677,6 @@ jpn:
         # rosa_gallica: "Rosa gallica"
         # rosa_recht: "Rosa recht"
         # rosaceae: "Rosaceae"
-        # rubisko: "Rubisko"
         # rubus: "Rubus"
         # rubus_idaeus: "Rubus idaeus"
         # rubus_idaeus_frida: "Rubus idaeus - Frida"
@@ -2713,11 +2684,9 @@ jpn:
         # rubus_idaeus_tulameen: "Rubus idaeus - Tulameen"
         # rubus_idaeus_willamette: "Rubus idaeus - Willamette"
         # rubus_idaeus_zeva: "Rubus idaeus - Zeva"
-        # runal: "Runal"
         # salmo: "Salmonidé"
         # salt: "Sel"
         # sand: "Sable"
-        # sculptur: "Sculptur"
         # secale: "Secale"
         # seed: "Semence"
         # seedling: "Plant"
@@ -2726,7 +2695,6 @@ jpn:
         # settlement: "Agencement"
         # silage: "Ensilage"
         # slurry: "Lisier"
-        # soissons: "Soissons"
         # solanaceae: "Solanaceae"
         # solanum: "Pomme de terre"
         # sorghum: "Sorgho"
@@ -2736,20 +2704,52 @@ jpn:
         # straw: "Paille"
         # sub_zone: "Sous zone"
         # sus: "Porcin"
-        # sy_banco: "Sy banco"
-        # sy_cysco: "Sy cysco"
-        # tablur: "Tablur"
-        # tamaro: "Tamaro"
         # tank: "Réservoir"
-        # texel: "Texel"
         # tonda_giffoni: "Tonda giffoni"
         # tractor: "Tracteur"
         # trailer: "Remorque"
-        # tremie: "Tremie"
         # triticosecale: "Triticale"
         # triticum: "Blé"
         # triticum_aestivum: "Blé tendre"
+        # triticum_aestivum_apache: "Triticum aestivum - apache"
+        # triticum_aestivum_ascott: "Triticum aestivum - ascott"
+        # triticum_aestivum_autan: "Triticum aestivum - autan"
+        # triticum_aestivum_aztec: "Triticum aestivum - aztec"
+        # triticum_aestivum_bussard: "Triticum aestivum - bussard"
+        # triticum_aestivum_caphorn: "Triticum aestivum - caphorn"
+        # triticum_aestivum_courtot: "Triticum aestivum - courtot"
+        # triticum_aestivum_esperia: "Triticum aestivum - esperia"
+        # triticum_aestivum_euclide: "Triticum aestivum - euclide"
+        # triticum_aestivum_galibier: "Triticum aestivum - galibier"
+        # triticum_aestivum_isengrain: "Triticum aestivum - isengrain"
+        # triticum_aestivum_levis: "Triticum aestivum - levis"
+        # triticum_aestivum_lona: "Triticum aestivum - lona"
+        # triticum_aestivum_manital: "Triticum aestivum - manital"
+        # triticum_aestivum_oratorio: "Triticum aestivum - oratorio"
+        # triticum_aestivum_qualital: "Triticum aestivum - qualital"
+        # triticum_aestivum_quality: "Triticum aestivum - quality"
+        # triticum_aestivum_quebon: "Triticum aestivum - quebon"
+        # triticum_aestivum_recital: "Triticum aestivum - recital"
+        # triticum_aestivum_renan: "Triticum aestivum - renan"
+        # triticum_aestivum_rubisko: "Triticum aestivum - rubisko"
+        # triticum_aestivum_runal: "Triticum aestivum - runal"
+        # triticum_aestivum_soissons: "Triticum aestivum - soissons"
+        # triticum_aestivum_tamaro: "Triticum aestivum - tamaro"
+        # triticum_aestivum_texel: "Triticum aestivum - texel"
+        # triticum_aestivum_tremie: "Triticum aestivum - tremie"
         # triticum_durum: "Blé dur"
+        # triticum_durum_alexis: "Triticum durum - alexis"
+        # triticum_durum_aventur: "Triticum durum - aventur"
+        # triticum_durum_biensur: "Triticum durum - biensur"
+        # triticum_durum_cultur: "Triticum durum - cultur"
+        # triticum_durum_fabulis: "Triticum durum - fabulis"
+        # triticum_durum_karur: "Triticum durum - karur"
+        # triticum_durum_miradoux: "Triticum durum - miradoux"
+        # triticum_durum_pescadou: "Triticum durum - pescadou"
+        # triticum_durum_sculptur: "Triticum durum - sculptur"
+        # triticum_durum_sy_banco: "Triticum durum - sy banco"
+        # triticum_durum_sy_cysco: "Triticum durum - sy cysco"
+        # triticum_durum_tablur: "Triticum durum - tablur"
         # triticum_spelta: "Épeautre"
         # vicia: "Vesces - Féverolle"
         # vitis: "Vigne"
